<resources>
    <string name="app_name">Shopping Application</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="categories">Categories</string>
    <string name="about_us">About Us</string>
    <string name="terms">Terms</string>
    <string name="licences">Licences</string>
    <string name="add_a_review">(Add a review)</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="name">Name</string>
    <string name="_15">$15</string>
    <string name="description">Description</string>
    <string name="reviews">Reviews :</string>
    <string name="type_anything">Type Anything</string>
    <string name="first_category">First Category</string>
    <string name="second_category">Second Category</string>
    <string name="third_category">Third Category</string>
    <string name="see_all_categories">See All Categories</string>
    <string name="item_name">Item Name</string>
    <string name="dismiss">Dismiss</string>
    <string name="you_are_reviewing">You are reviewing</string>
    <string name="your_name_here">Your Name Here</string>
    <string name="review">Review</string>
    <string name="warning">Warning</string>
    <string name="add">Add</string>
    <string name="your_cart_items">Your Cart Items</string>
    <string name="sum">Sum:</string>
    <string name="next">Next</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="address_">Address:</string>
    <string name="address">Address</string>
    <string name="zip_code_">Zip Code:</string>
    <string name="zip_code">Zip Code</string>
    <string name="phone_number_">Phone Number:</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_">Email:</string>
    <string name="email">Email</string>
    <string name="back">Back</string>
    <string name="total_price_">Total Price</string>
    <string name="items">Items:</string>
    <string name="item_names">Item Names</string>
    <string name="paypal">PayPal</string>
    <string name="debit_card">Debit Card</string>
    <string name="credit_card">Credit Card</string>
    <string name="payment_method">Select a payment method</string>
    <string name="checkout">Checkout</string>
    <string name="new_items">New Items</string>
    <string name="popular_items">Popular Items</string>
    <string name="suggested_items">Suggested Items</string>
    <string name="payment_accepted">Your Payment is Accepted</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="price">Price</string>
    <string name="pksv_com">pksv.com</string>
    <string name="user_name">User Name</string>
    <string name="date">Date</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
</resources>