<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp">

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/address_"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAddress"
        android:layout_marginTop="10dp"
        android:hint="@string/address"
        android:lines="2" />

    <TextView
        android:id="@+id/txtZipCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etAddress"
        android:layout_marginTop="10dp"
        android:text="@string/zip_code_"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etZipCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtZipCode"
        android:layout_marginTop="10dp"
        android:hint="@string/zip_code"
        android:inputType="number" />

    <TextView
        android:id="@+id/txtPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etZipCode"
        android:layout_marginTop="10dp"
        android:text="@string/phone_number_"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPhoneNumber"
        android:layout_marginTop="10dp"
        android:hint="@string/phone_number"
        android:inputType="number" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPhoneNumber"
        android:layout_marginTop="10dp"
        android:text="@string/email_"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEmail"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:id="@+id/btnLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/back" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnLL"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/warning"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone" />


</RelativeLayout>