<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.GroceryItemActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:elevation="5dp" />

    <Button
        android:id="@+id/btnAddToCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/add_to_cart"
        android:textAllCaps="false" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btnAddToCart"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/firstRelLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/_15"
                    android:textColor="#EE008F"
                    android:textStyle="italic" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/itemImage"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_below="@id/firstRelLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />

            <RelativeLayout
                android:id="@+id/starRelLay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemImage"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp">

                <RelativeLayout
                    android:id="@+id/firstStarRelLay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/firstFilledStar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_filled_star"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/firstEmptyStar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_empty_star" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/secondStarRelLay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/firstStarRelLay">

                    <ImageView
                        android:id="@+id/secondFilledStar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_filled_star"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/secondEmptyStar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_empty_star" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/thirdStarRelLay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/secondStarRelLay">

                    <ImageView
                        android:id="@+id/thirdFilledStar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_filled_star"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/thirdEmptyStar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_empty_star" />

                </RelativeLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/starRelLay"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:textStyle="italic" />

            <RelativeLayout
                android:id="@+id/reviewRelLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDescription">

                <TextView
                    android:id="@+id/txtReviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtAddReview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/txtReviews"
                    android:text="@string/add_a_review"
                    android:textColor="#E11313"
                    android:textStyle="italic" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/reviewsRV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtReviews"
                    android:layout_marginTop="10dp" />

            </RelativeLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>